# duckdb-sistat

./: .gitignore  CMakeLists.txt  Makefile  README.md  community-extensions-description.yml  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  SistatTableCount.yml
examples/queries/: readme_01.sql  readme_02.sql  readme_03.sql  readme_04.sql  readme_05.sql  readme_06.sql  readme_07.sql  readme_08.sql  readme_09.sql
examples/results/: readme_01.txt  readme_02.txt  readme_03.txt  readme_04.txt  readme_05.txt  readme_06.txt  readme_07.txt  readme_08.txt  readme_09.txt
scripts/: extract_readme_sql.sh  run_readme_queries.sh
src/: sistat_extension.cpp
src/include/: function_builder.hpp  sistat_extension.hpp
src/sistat/: CMakeLists.txt  http_request.cpp  http_request.hpp  sistat.hpp  sistat_data_functions.cpp  sistat_data_functions.hpp  sistat_info_functions.cpp  sistat_info_functions.hpp
test/: README.md  e2e_sistat_smoke.sh
test/sql/: sistat.test
